// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cve simple test: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve simple test: vulnerability 1`] = `
Object {
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-10866",
  "cvss": "9.8",
  "cwe": "CWE-89",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "state": "open",
  "title": "CVE-2019-10866",
}
`;

exports[`cve simple test: vulnerability 2`] = `
Object {
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-11590",
  "cvss": "8.8",
  "cwe": "CWE-352",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "state": "open",
  "title": "CVE-2019-11590",
}
`;
